tests/lean/forErrors.lean.expected.out
forErrors.lean:3:29-3:30: error: failed to synthesize instance
  ToStream α ?m
